# pyo3-test-som

./: Cargo.toml  build.rs  ddkdk.pyi  pyproject.toml  som.ipynb  test.py
src/: lib.rs
src/som/: mod.rs  pca.rs
